// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopCountries when data is loaded and a country with name "" exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_country"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Countries
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The country from which user activity originates. Location data may be affected by a user's VPN usage.
            </span>
          </span>
        </a>
        <a
          aria-label="top-countries-realtime.csv"
          href="http://www.example.com/data//top-countries-realtime.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="cities chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="top-countries-realtime"
            >
              30 Minutes
            </option>
            <option
              value="top-countries-7-days"
            >
              7 Days
            </option>
            <option
              value="top-countries-30-days"
            >
              30 Days
            </option>
            <option
              value="top-countries-90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              International
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              100%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 100%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="9.698050008324927"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Saint Vincent and the Grenadines
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9.7%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 10%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="9.323918004368139"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Slovakia
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="8.973291676052614"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Unknown
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.841101632665054"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Curacao
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 8%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.367070507232892"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Portugal
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.112425687785863"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Sudan
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.5492688755472415"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    French Polynesia
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.5%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.335758988472424"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Montenegro
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 6%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.262333134188026"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Bahrain
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.183980882050478"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Cocos (Keeling) Islands
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.117381467733563"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Eritrea
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.101711017306053"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Sao Tome and Principe
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.595359587867154"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Jersey
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.6%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.460201952929885"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Sweden
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.5%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.078146577475687"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Other
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountries when data is loaded and a country with name null exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_country"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Countries
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The country from which user activity originates. Location data may be affected by a user's VPN usage.
            </span>
          </span>
        </a>
        <a
          aria-label="top-countries-realtime.csv"
          href="http://www.example.com/data//top-countries-realtime.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="cities chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="top-countries-realtime"
            >
              30 Minutes
            </option>
            <option
              value="top-countries-7-days"
            >
              7 Days
            </option>
            <option
              value="top-countries-30-days"
            >
              30 Days
            </option>
            <option
              value="top-countries-90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              International
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              100%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 100%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="10.14626670573122"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Brunei Darussalam
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    10.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 10%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="9.323657343760566"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Monaco
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="9.039688084559735"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    India
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.4451781569042845"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Democratic Republic of the Congo
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.1848730026368575"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Unknown
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.0642987536904736"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    French Southern Territories
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.18421942259584"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Guinea-Bissau
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 6%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.919406819769669"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Grenada
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 6%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.314281850758378"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Monaco
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.988618692389173"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Russian Federation
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.845507200649073"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Jersey
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.566045390006987"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Iceland
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.6%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.160375019720088"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Guinea
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="3.804286583579365"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    United States Minor Outlying Islands
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    3.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="10.013296973248293"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Other
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    10%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 10%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountries when data is loaded and a country with name undefined exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_country"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Countries
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The country from which user activity originates. Location data may be affected by a user's VPN usage.
            </span>
          </span>
        </a>
        <a
          aria-label="top-countries-realtime.csv"
          href="http://www.example.com/data//top-countries-realtime.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="cities chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="top-countries-realtime"
            >
              30 Minutes
            </option>
            <option
              value="top-countries-7-days"
            >
              7 Days
            </option>
            <option
              value="top-countries-30-days"
            >
              30 Days
            </option>
            <option
              value="top-countries-90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              International
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              88.7%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 89%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="9.354646504078405"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Zimbabwe
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="9.221096751659099"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Malawi
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.903063425859341"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Kenya
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 8%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.729448747714245"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Jordan
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.7%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 8%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.538369871175854"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Lesotho
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.5%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 8%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.919931786895687"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Sierra Leone
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.572702430605494"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Norway
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.6%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.399087752460398"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Turkey
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 6%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.74263935403012"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    India
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.7%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 6%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.399519220891291"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Grenada
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.113332374514598"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Chad
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="3.5205769349304514"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Unknown
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    3.5%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="2.0114647325923034"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Poland
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 2%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="1.8820242033243613"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    North Macedonia
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    1.9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 2%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.434879086108771"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Other
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              United States & Territories
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              11.3%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 11%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            id="chart_us_and_territories"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="10.180600357502415"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    American Samoa
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    10.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 10%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="1.0766164656571675"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Puerto Rico
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    1.1%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 1%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountries when data is loaded and all country names are valid renders a component with data loaded 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_country"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Countries
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The country from which user activity originates. Location data may be affected by a user's VPN usage.
            </span>
          </span>
        </a>
        <a
          aria-label="top-countries-realtime.csv"
          href="http://www.example.com/data//top-countries-realtime.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="cities chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="top-countries-realtime"
            >
              30 Minutes
            </option>
            <option
              value="top-countries-7-days"
            >
              7 Days
            </option>
            <option
              value="top-countries-30-days"
            >
              30 Days
            </option>
            <option
              value="top-countries-90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      >
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              International
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              93.5%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 94%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="10.50710035323961"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Cuba
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    10.5%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 11%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="8.976790498091558"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Bahamas
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="8.840473198833598"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    New Zealand
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    8.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 9%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="8.047462127498163"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Finland
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 8%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="7.768900689884071"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Slovenia
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    7.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 8%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.73644531898248"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Cameroon
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.7%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.687845238377468"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Costa Rica
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.7%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 7%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="6.377278869633248"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Chile
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    6.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 6%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="5.290296579028472"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Bahamas
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    5.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.305255920912259"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Jersey
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.295772978355183"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Burundi
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.3%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.174865460752471"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Isle of Man
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="3.925938218629241"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Marshall Islands
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    3.9%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="3.2135321590289463"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Fiji
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    3.2%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 3%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.387046300467035"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    Other
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.4%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 4%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
        <div
          class="chart__bar-chart__item margin-bottom-2"
        >
          <div
            class="chart__bar-chart__item__label-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
            >
              United States & Territories
            </div>
            <div
              class="chart__bar-chart__item__value grid-col-auto text--align-right"
            >
              6.5%
            </div>
          </div>
          <div
            class="chart__bar-chart__item__bar-wrapper grid-row"
          >
            <div
              class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
              style="width: 6%;"
            />
          </div>
          <figure
            class="chart__bar-chart__nested grid-col-12"
            id="chart_us_and_territories"
          >
            <div
              class="data chart__bar-chart text--capitalize"
            >
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="4.750954221094806"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    American Samoa
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    4.8%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 5%;"
                  />
                </div>
              </div>
              <div
                class="chart__bar-chart__item margin-bottom-2"
                data-share="1.7140418671913893"
              >
                <div
                  class="chart__bar-chart__item__label-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__label dark-gray text--overflow-ellipsis grid-col-fill padding-right-1"
                  >
                    United States
                  </div>
                  <div
                    class="chart__bar-chart__item__value grid-col-auto text--align-right"
                  >
                    1.7%
                  </div>
                </div>
                <div
                  class="chart__bar-chart__item__bar-wrapper grid-row"
                >
                  <div
                    class="chart__bar-chart__item__bar bg-palette-color-5 margin-top-0 grid-col-12"
                    style="width: 2%;"
                  />
                </div>
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountries when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_country"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Countries
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The country from which user activity originates. Location data may be affected by a user's VPN usage.
            </span>
          </span>
        </a>
        <a
          aria-label="top-countries-realtime.csv"
          href="http://www.example.com/data//top-countries-realtime.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="cities chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="top-countries-realtime"
            >
              30 Minutes
            </option>
            <option
              value="top-countries-7-days"
            >
              7 Days
            </option>
            <option
              value="top-countries-30-days"
            >
              30 Days
            </option>
            <option
              value="top-countries-90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      id="chart_countries"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountries when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div
    class="padding-0"
  >
    <div
      class="grid-row"
    >
      <div
        class="chart__title display-flex card:grid-col-12 mobile-lg:grid-col-fill card:flex-justify-center mobile-lg:flex-justify-start card:padding-bottom-105 mobile-lg:padding-bottom-0"
      >
        <a
          href="/definitions#dimension_country"
        >
          <span
            class="usa-tooltip"
          >
            <span
              aria-describedby="tooltip-550000"
              class="usa-tooltip__trigger"
              data-position="top"
              tabindex="0"
            >
              Countries
            </span>
            <span
              aria-hidden="true"
              class="usa-tooltip__body"
              id="tooltip-550000"
              role="tooltip"
            >
              The country from which user activity originates. Location data may be affected by a user's VPN usage.
            </span>
          </span>
        </a>
        <a
          aria-label="top-countries-realtime.csv"
          href="http://www.example.com/data//top-countries-realtime.csv"
        >
          <svg
            aria-hidden="true"
            class="usa-icon margin-bottom-neg-05 margin-left-05"
            focusable="false"
            role="img"
          >
            <use
              xlink:href="/assets/uswds/img/sprite.svg#file_present"
            />
          </svg>
        </a>
      </div>
      <div
        class="card:grid-col-12 mobile-lg:grid-col-auto"
      >
        <div
          class="display-flex card:flex-justify-center mobile-lg:flex-justify-end"
        >
          <select
            aria-label="cities chart time filter"
            class="usa-select chart__filter margin-top-0"
          >
            <option
              value="top-countries-realtime"
            >
              30 Minutes
            </option>
            <option
              value="top-countries-7-days"
            >
              7 Days
            </option>
            <option
              value="top-countries-30-days"
            >
              30 Days
            </option>
            <option
              value="top-countries-90-days"
            >
              90 Days
            </option>
          </select>
        </div>
      </div>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-2"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested grid-col-12"
      id="chart_countries"
    >
      <div
        class="data chart__bar-chart text--capitalize"
      />
    </figure>
  </div>
</DocumentFragment>
`;
